--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <!-- About me section -->
     <div>
       <h2>About Me</h2>
-        <p>After graduating from college with a Kinesiology degree and a minor in Health, I stayed in the restaurant business because of my passion to work with others to see a common goal come to fruition and that was satisfied customers leaving our restaurant. The collaboration of all the hands and minds that go into each project excite me to continue learning and progressing in my software develpoment career.</p>
+        <p>After graduating from college with a kinesiology degree and spending ten years in the service industry, I decided to start on a new path and pursue software development. This journey combines my passion for helping other's and technology while providing new opportunities for my family and me.</p>
         
-        <p>As a student in Thinkful's Software Developer course, I could not be happier to continue on this path towards my goal in helping other's and myself for all software developing needs!</p>
+        <p>As a student in Thinkful's Software Developer course, I could not be happier to work towards my goals while collaborating with other's and continuing to work in a team environment. </p>
 
-        <p>This new chapter in my life has fueled me to stay connected with my passions towards exercise, learning new skills, and connecting with my family and friends.</p>
+      <p>If you're looking to hire a new developer who values being a team player, always learning and taking on new challenges please reach out! I'm excited about the possibility of working together and jumpstarting my new career.</p>
     </div>
 
     <!-- Contact -->
